--- a/scraper/recipe/config.yml
+++ b/scraper/recipe/config.yml
@@ -44,3 +44,14 @@ nikomaru:
     program_name: "KSB にこまるキッチン"
     entry_urls:
         - "http://setonaikai.co.jp/250/paradise/list"
+nhk_kobara_ka:
+    enable: true
+    program_name: "NHK きじまりゅうたの小腹すいてませんか？"
+    entry_urls:
+        - "https://www4.nhk.or.jp/kobara/23/"
+nhk_kobara_ta:
+    enable: false
+    program_name: "NHK きじまりゅうたの小腹がすきました！"
+    entry_urls:
+        - "https://www4.nhk.or.jp/P4131/22/"
+        - "https://www4.nhk.or.jp/P4131/23/"
