--- a/scraper/recipe_crawler_logging.config
+++ b/scraper/recipe_crawler_logging.config
@@ -13,7 +13,7 @@ handlers=TimedRotatingFileHandler,StreamHandler
 
 [handler_TimedRotatingFileHandler]
 class=logging.handlers.TimedRotatingFileHandler
-args=("./logs/main.log", "midnight", 1, 31)
+args=("./recipe_crawler/main.log", "midnight", 1, 31)
 level=DEBUG
 formatter=simple
 
