rename package from "EvernoteTranslator" to "evernote_translator". add pattern TBS おびゴハン！. Changed behavior when first argument is specified. Forced execution even if the enable value in config is False. If enable is omitted from config, then True is specified.

--- a/scraper/recipe_crawler_config.yml
+++ b/scraper/recipe_crawler_config.yml
@@ -55,6 +55,12 @@ rsk_cooking_recipe:
     program_name: "RSK クッキング・レシピ"
     entry_urls:
         - "http://www.rsk.co.jp/tv/recipe/"
+tbs_obigohan:
+    enable: true
+    program_name: "TBS おびゴハン！"
+    is_expand_entry_urls: false
+    entry_urls:
+        - "https://www.tbs.co.jp/obigohan/calendar/"
 three_minutes_cooking:
     enable: true
     program_name: "NTV キューピー3分クッキング"
