change loglevel pdfminer, from DEBUG to ERROR.

--- a/scraper/recipe_crawler_logging.yml
+++ b/scraper/recipe_crawler_logging.yml
@@ -21,3 +21,8 @@ handlers:
 formatters:
     simple:
         format: "%(asctime)s [%(levelname)s] %(message)s"
+loggers:
+    pdfminer:
+        level: ERROR
+        handlers:
+            - StreamHandler
