add crawler: KTV にじいろジーン. It includes useless processing.Read the same URL many times.

--- a/scraper/recipe_crawler_config.yml
+++ b/scraper/recipe_crawler_config.yml
@@ -8,6 +8,12 @@ danshigohan:
     program_name: "テレ東 男子ごはん"
     entry_urls:
         - "https://www.tv-tokyo.co.jp/danshigohan/recipe/"
+ktv_niji:
+    enable: true
+    program_name: "KTV にじいろジーン"
+    is_expand_entry_urls: true
+    entry_urls:
+        - "https://www.ktv.jp/niji/"
 nhk_kamado:
     enable: true
     program_name: "NHK グレーテルのかまど"
